Changes for contract data.

--- a/totalhr.web/areas/Admin/Views/Contract/FillContract.cshtml
+++ b/totalhr.web/areas/Admin/Views/Contract/FillContract.cshtml
@@ -55,14 +55,14 @@
                             FormTypeId : $scope.FormTypeId,
                             Data: JSON.stringify(formData.data)
                         },
-                        function(msg) {
-                            var message = msg.Message;
-                            alert(msg.Message);
+                        function(data) {
+                            var message = data.Message;
+                            alert(message);
                             $scope.errorMessage = '';
                         },
                         function(data, response) {
-                            alert(data.Message);
-                            $scope.errorMessage = data.Message;
+                            alert($('#hdnError').val());
+                            $scope.errorMessage = $('#hdnError').val();
                         }
                     );
 
