--- a/totalhr.web/Views/Shared/_SideBarMenu.cshtml
+++ b/totalhr.web/Views/Shared/_SideBarMenu.cshtml
@@ -8,12 +8,12 @@
         </a>
     </li>
      <li>
-        <a class="" href="/Payroll/">
+        <a class="" href="/Account/Payroll/">
             <span class="icon-box"><i class="icon-dashboard"></i></span> @Account.V_Payroll
         </a>
     </li> 
      <li>
-        <a class="" href="/Task/">
+        <a class="" href="/Account/Task/">
             <span class="icon-box"><i class="icon-dashboard"></i></span> @Account.V_Tasks
         </a>
     </li>   
@@ -24,7 +24,7 @@
         </a>
     </li>  
      <li>
-        <a class="" href="/Contract/">
+        <a class="" href="/Account/Contract/">
             <span class="icon-box"><i class="icon-dashboard"></i></span> @Account.V_My_Contract
         </a>
     </li>  
